--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
   display: flex;
   border-bottom: 1px solid #ccc;
   width: 100%;
+  align-items: center;
 }
 header {
   display: flex;
@@ -18,6 +19,7 @@ header {
   align-items: center;
   padding: 1rem  1rem 0 1rem;
   background-color: #fff;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
 }
 
 .header__logo {
@@ -25,20 +27,14 @@ header {
 }
 
 .header__logo img {
-  width: 50px;
+  width: 40px;
   border-radius: 20%;
 }
-.headerMap{
-  border: 1px solid white;
-  padding: 1rem ;
-  width:60%;
-  height: 300px;
-  border-radius: 5%;
 
-}
 .header__title h1 {
-  font-size: 2rem;
+  font-size: 20px;
   font-weight: 700;
+  display: flex;
   color: #333;
   margin: 0;
 }
